---------------------------------------------------------------------------------------------------
Version: 1.19.0
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Added import/export of saves load order
---------------------------------------------------------------------------------------------------
Version: 1.18.1
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Fixed Options and Saves in v1.0.0 and v1.0.1
---------------------------------------------------------------------------------------------------
Version: 1.18.0
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Added Big Mode in options, will make the launcher bigger in height
* Fixed Launcher Options saving
* UI cleanup
---------------------------------------------------------------------------------------------------
Version: 1.17.3
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Added search in Mods and Saves
---------------------------------------------------------------------------------------------------
Version: 1.17.2
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Minor newline improvements in Hints
---------------------------------------------------------------------------------------------------
Version: 1.17.1
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Added directory buttons in Mods (opens mods folder) and Saves (opens folder with save file)
---------------------------------------------------------------------------------------------------
Version: 1.17.0
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Restored v1.12.x sorting algorithm, disable Beta Sorting in the Launcher Options for it to work
* Added dialog that asks whether the load order should be imported if there's a version difference
* Fixed TextBox crash and any other in-game crashes, cleanup was incorrect
---------------------------------------------------------------------------------------------------
Version: 1.16.0
Game Versions: v1.0.0,v1.0.1,v1.0.2
* Added the ability to select a save to load from launcher